@@ -390,4 +390,5 @@ BUGFIXES:
 366 ==> 439231 - ExifTool and e.g. *.psd images.
 367 ==> 439409 - Video slideshow does not respect EXIF orientation flag.
 368 ==> 439404 - Writing of face tags should not depend on the tags settings.
-369 ==> 
+369 ==> 439436 - Problems with video-slideshow.
+370 ==> 
